# securevector-sdk-crewai

./: CHANGELOG.md  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml  develop-preview-publish.yml  release.yml
src/securevector_sdk_crewai/: __init__.py  _version.py  auto.py  client.py  core.py  costs.py  tool_id.py  wrapper.py
tests/: test_analyze.py  test_auth.py  test_costs.py  test_engine_endpoint.py  test_interceptor.py  test_tool_id.py  test_verdict.py  test_wrapper.py
