[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
# PyPI distribution name. Import name is `securevector_sdk_crewai`.
# Brand-led, framework-suffixed — descriptive nominative-fair-use naming, NOT a
# `crewai-*` prefix that could imply an official CrewAI integration. See README
# "Trademarks".
name = "securevector-sdk-crewai"
version = "1.2.0"
description = "SecureVector SDK for CrewAI — brings the local threat monitor's three controls (tool-call permissions, secret/data-leak detection, threat detection) to every CrewAI tool call, with tamper-evident audit logging."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "SecureVector" }]
keywords = ["crewai", "llm", "security", "ai-agent", "audit", "compliance", "tool-permissions"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]

# Thin interception layer. Depends on:
#   - securevector-ai-monitor: the local app + shipped SecureVectorClient
#     (detection engine + tamper-evident audit chain live there). One
#     `pip install securevector-sdk-crewai` brings the adapter AND the app.
#   - crewai: the framework whose BaseTool we wrap.
# Everything else (permission resolution, audit forwarding) uses the stdlib.
dependencies = [
    "securevector-ai-monitor>=4.7",
    "crewai>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://securevector.io"
Source = "https://github.com/Secure-Vector/securevector-sdk-crewai"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]
